removed the overflow hidden on the product image block to stop the image from cutting out

--- a/webroot/skin/frontend/blueacorn/mis/css/styles-product-ie8.css
+++ b/webroot/skin/frontend/blueacorn/mis/css/styles-product-ie8.css
@@ -1700,8 +1700,7 @@
   overflow: hidden; }
 
 .catalog-product-view .product-view .product-img-box {
-  position: relative;
-  overflow: hidden; }
+  position: relative; }
   .catalog-product-view .product-view .product-img-box .product-image {
     width: 80%;
     position: absolute;
