--- a/webroot/skin/frontend/blueacorn/mis/css/styles-product.css
+++ b/webroot/skin/frontend/blueacorn/mis/css/styles-product.css
@@ -2118,8 +2118,7 @@
   overflow: hidden; }
 
 .catalog-product-view .product-view .product-img-box {
-  position: relative;
-  overflow: hidden; }
+  position: relative; }
   .catalog-product-view .product-view .product-img-box .product-image {
     width: 80%;
     position: absolute;
