--- a/webroot/skin/frontend/blueacorn/mis/scss/content/catalog/product/_media-block.scss
+++ b/webroot/skin/frontend/blueacorn/mis/scss/content/catalog/product/_media-block.scss
@@ -4,7 +4,6 @@
     }
     .product-img-box{
         position: relative;
-        overflow:hidden;
 
         .product-image{
             width:80%;
